# rules_build_secrets

./: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
examples/: BUILD.bazel  myvault.json  myvault.json.crypt  secret_file_test.py
lib/: BUILD.bazel  extensions.bzl  secrets.bzl
lib/simplecrypt/: BUILD.bazel  simplecrypt.go
