module(
    name="rules_build_secret",
    version = "0.0.0",
    compatibility_level = 1,

)

bazel_dep(name = "bazel_skylib", version = "1.4.1")

rules_build_secret = use_extension("@rules_build_secret//lib:extensions.bzl", "rules_build_secret")
rules_build_secret.options()
use_repo(rules_build_secret, "env")