# Import a secret into the local BUILD.bazel environment
load("@env//:secrets.bzl","MAVEN_USER", "MAVEN_PASS")

#
genrule(
    name = "secret_file",
    srcs = [],
    outs = ["secret.txt"],
    #cmd = "echo OK > \"$@\"",
    cmd = "echo 'MAVEN_USER={0} MAVEN_PASS={1}'> \"$@\"".format(MAVEN_USER,MAVEN_PASS),
)

py_test(
    name = "secret_file_test",
    srcs = ["secret_file_test.py"],
    data = ["@env//:secrets"],
)
